--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     background: url(download.jpeg);
-    background-size: cover;
+    background-size: 400px;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
